--- a/templates/pokemon.html
+++ b/templates/pokemon.html
@@ -66,6 +66,7 @@
         <div class="table-responsive">
           <table id="poke-table" class="table table-striped">
             <thead>
+              <th>Pokemon number</th>
               <th>Recent</th>
               <th>Name</th>
               <th>Nickname</th>
@@ -81,6 +82,7 @@
             </thead>
             {% for pokemon in pokemons %}
             <tr id="{{pokemon['id']}}">
+              <td data-order="{{pokemon['pokemon_id']}}">{{pokemon["pokemon_id"]}}</td>
               <td data-order="{{ pokemon["creation_time_ms"] }}"><img style="max-height: 50px;" src={{ url_for( 'static', filename="pokemon/%03d.png" % pokemon[
                   'pokemon_id']) }}></td>
               <td>{{pokemon["name"]}}</td>
@@ -121,7 +123,7 @@
             $('#map').addClass('scrolloff');
         });
         $('#poke-table').dataTable({
-          order: [[ 0, "desc" ]],
+          order: [[ 0, "asc" ]],
           searching: false,
           paging: false
         });
